--- a/style.css
+++ b/style.css
@@ -1,19 +1,42 @@
 * {
-  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
-    'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif,
-    'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+  font-family: Averta, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Helvetica, Arial, sans-serif;
 }
 
-div {
-  margin-top: 10px;
+.container {
+  /* display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-width: 1px;
+  border-color: rgb(226 232 240); */
+  box-sizing: content-box;
 }
 
 .container-content {
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* background-color: black; */
-  color: black;
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+}
+
+.container-metrics {
+  display: flex;
+  flex-direction: row;
+}
+
+.container-label-value {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-left: 1.25rem;
+  margin-right: 1.25rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.display-label {
+  margin-bottom: 0.5rem;
 }
 
 .btns {
@@ -24,7 +47,7 @@ div {
 
 .btn {
   border-radius: 0.375rem;
-  background-color: #4d46dc;
+  background-color: #6466f1;
   border: none;
   margin: 10px;
   padding: 8px 12px;
@@ -37,6 +60,6 @@ div {
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
 }
 
-.btn b {
-  color: black;
+.display-label {
+  color: rgb(100 116 139);
 }
