--- a/style.css
+++ b/style.css
@@ -53,15 +53,18 @@
   padding: 8px 12px;
   display: inline-block;
   color: white;
+  box-shadow: 0;
+  transition: box-shadow 0.1s;
 }
 
 .btn:active {
   transform: translateY(2px);
-  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
 }
 
 .btn:hover {
   cursor: pointer;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
 }
 
 .display-label {
