darkened background color on button hover

--- a/style.css
+++ b/style.css
@@ -65,6 +65,7 @@
 .btn:hover {
   cursor: pointer;
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
+  background-color: #4f51f0;
 }
 
 .display-label {
