--- a/style.css
+++ b/style.css
@@ -55,10 +55,11 @@
   color: white;
   box-shadow: 0;
   transition: box-shadow 0.1s;
+  transition: transform 0.05s;
 }
 
 .btn:active {
-  transform: translateY(2px);
+  transform: translateY(1.5px);
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
 }
 
